fix Sidebar with overflow hidden

--- a/Signum.React.Extensions/Toolbar/Sidebar.css
+++ b/Signum.React.Extensions/Toolbar/Sidebar.css
@@ -29,6 +29,7 @@
         min-width: 251px;
         display: flex;
         flex-direction: column;
+        overflow: hidden;
     }
 }
 
